# vanta

./: .gitignore  README.md
cpp/: CMakeLists.txt  vcpkg.json
cpp/apps/app1/: CMakeLists.txt
cpp/apps/hello_triangle/: CMakeLists.txt  main.cpp
cpp/apps/imgui_example/: CMakeLists.txt  main.cpp
cpp/cmake/: utils.cmake
